# src/authentication/presentation/http/openapi_server.gen.go
@@ -13,6 +13,9 @@ type ServerInterface interface {
 	// (POST /login)
 	Login(ctx echo.Context) error
 
+	// (POST /refresh-token)
+	RefreshToken(ctx echo.Context) error
+
 	// (POST /register)
 	Register(ctx echo.Context) error
 
@@ -31,6 +34,15 @@ func (w *ServerInterfaceWrapper) Login(ctx echo.Context) error {
 
 	// Invoke the callback with all the unmarshaled arguments
 	err = w.Handler.Login(ctx)
+	return err
+}
+
+// RefreshToken converts echo context to params.
+func (w *ServerInterfaceWrapper) RefreshToken(ctx echo.Context) error {
+	var err error
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.RefreshToken(ctx)
 	return err
 }
 
@@ -81,6 +93,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	}
 
 	router.POST(baseURL+"/login", wrapper.Login)
+	router.POST(baseURL+"/refresh-token", wrapper.RefreshToken)
 	router.POST(baseURL+"/register", wrapper.Register)
 	router.GET(baseURL+"/user", wrapper.GetUser)
 
